# im-neovim

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/im_app/: application.h  file_system.h  layer.h  pty.h
src/im_app/: application.cpp
src/im_app/interfaces/im_app/: graphics_context.h  imgui_renderer.h  window.h
src/im_neovim/: im_neovim_app.cpp
src/im_neovim/gui/: terminal.cpp
src/im_neovim/include/im_neovim/: logging.h
src/im_neovim/include/im_neovim/gui/: terminal.h
